--- a/DWS/index.html
+++ b/DWS/index.html
@@ -11,11 +11,11 @@
 
         <div id="left">Primera columna</div>
         <div id="center">
-            <div id="left2"></div>
-            <div id="center2"></div>
-            <div id="right2"></div>
+            <div id="left2">Segunda columna</div>
+            <div id="center2">Tercera columna</div>
+            <div id="right2">Cuarta columna</div>
         </div>
-        <div id="right">Tercera columna</div>
+        <div id="right">Quinta columna</div>
 
     </div>
     <div id="bajo">Parte inferior</div>
