Ejercicio 22 JavaScript incompleto

--- a/DWC/Ejercicios/Ejer22/index.html
+++ b/DWC/Ejercicios/Ejer22/index.html
@@ -21,7 +21,7 @@
             document.write("<input id='src' type='text'></input> ");
             document.write("<button onclick=''>Probar suerte</button>");
             document.write("<p id='res'>Prueba suerte</p>");
-            let rand = trunc(Math.random() * 100 + 1);
+            let rand = Mayh.trunc(Math.random() * 100 + 1);
         }
 
         function numMagico(rand) {
