--- a/DWC/Practicas/Prac_01/index.html
+++ b/DWC/Practicas/Prac_01/index.html
@@ -3,17 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <title>Juego</title>
+    <style>
+        body {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        #juego {
+            width: 450px;
+            transform: translate(-50%, -50%);
+            margin-top: 50vh;
+            margin-left: 50vw;
+        }
+
+        #juego h1 {
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        #res1 {
+            font-size: 100px;
+        }
+
+        #res2 {
+            font-size: 100px;
+        }
+
+        #jug1 {
+            text-align: center;
+            width: 50%;
+            float: left;
+        }
+
+        #jug2 {
+            text-align: center;
+            width: 50%;
+            float: left;
+        }
+
+        #res {
+            margin-top: 10px;
+            width: 100%;
+            text-align: center;
+            display: block;
+        }
+
+        button {
+            transform: translate(-50%);
+            margin-left: 50%;
+            margin-top: 10%;
+            width: 80px;
+            height: 40px;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
     <div id="juego">
-        <h1>Pedra, paper, tisora!</h1>
-        <b id="jug1">Jugador 1</b> <b id="jug2">Jugador 2</b>
-        <p id="res1"></p> <p id="res2"></p>
-        <p id="res"></p>
+        <h1>Piedra, papel o tijeras!</h1>
+        <div id="jug1">
+            <b>Jugador 1</b>
+            <br>
+            <p id="res1">&#129306;</p>
+        </div>
+        <div id="jug2">
+            <b>Jugador 2</b>
+            <br>
+            <p id="res2">&#129306;</p>
+        </div>
+        <b id="res"></b>
+        <br>
+        <button onclick="Jugar()">Jugar</button>
     </div>
 
     <script>
-        window.onload = function Jugar() {
+        function Jugar() {
             let res = document.getElementById("res");
             let res1 = document.getElementById("res1");
             let res2 = document.getElementById("res2");
@@ -68,9 +137,17 @@
                     alert("Ha surgido un error");
             }
 
-            //if () {
-
-            //}
+            if (mano1 == 3 && mano2 == 1) {
+                res.innerHTML = "Ha ganado el jugador 2";
+            } else if (mano1 == 1 && mano2 == 3) {
+                res.innerHTML = "Ha ganado el jugador 1";
+            } else if (mano1 > mano2) {
+                res.innerHTML = "Ha ganado el jugador 1";
+            } else if (mano1 == mano2) {
+                res.innerHTML = "Ha habido un empate";
+            } else {
+                res.innerHTML = "Ha ganado el jugador 2";
+            }
         }
     </script>
 </body>
