--- a/DWC/Practicas/Prac_02/Ejer02/index.html
+++ b/DWC/Practicas/Prac_02/Ejer02/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>JS</title>
-    <script src="ejercicio2.js"></script>
 </head>
 <body>
-    <h1>NIE</h1>
-    <h3>Introduzca su NIE</h3>
-    <label for="num">Introduzca el número</label>
-    <br>
-    <input type="text" id="num">
-    <br>
-    <label for="letra">Introduzca la letra</label>
-    <br>
-    <input type="text" id="letra">
+    <p id="res1"></p>
+    <p id="res2"></p>
+    <p id="res3"></p>
+    <p id="res4"></p>
+    <script src="ejercicio2.js"></script>
 </body>
 </html>
