--- a/DIW/Ejercicios/Ejercicio practico/index.html
+++ b/DIW/Ejercicios/Ejercicio practico/index.html
@@ -4,49 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
-    <title>Empresa
-        Innovadora</title>
+    <title>Meteor PCs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">LogoEmpresa</div>
+            <div class="logo"><img src="img/logo_meteor_pc.png" alt="LogoEmpresa"></div>
             <ul class="nav-links">
-                <li><a href="#sobre-nosotros">Sobre
-                        Nosotros</a></li>
+                <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#galeria">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="hero">
-            <h1>Bienvenido a Empresa Innovadora</h1>
+            <h1>Bienvenido a Meteor PCs</h1>
             <p>Explora nuestros servicios y productos innovadores.</p>
             <a href="#contacto" class="btn">Contáctanos</a>
         </div>
     </header>
     <section id="sobre-nosotros">
-        <h2>Sobre
-            Nosotros</h2>
-        <p>Empresa
-            Innovadora es líder en el mercado de [tu sector]. Con más de 10
-            años de experiencia, ofrecemos soluciones de alta calidad.</p>
+        <h2>Sobre Nosotros</h2>
+        <p>Meteor PCs es líder en el mercado de equipos informáticos y de soporte técnico. Con más de 10 años de experiencia, ofrecemos soluciones de alta calidad a cualquier complicación con tu ordenador. También disponemos de un amplio abanico de productos con los que mejorar tu PC, ¡Y los precios son incomparables!</p>
     </section>
     <section id="servicios">
         <h2>Servicios</h2>
         <div class="servicios-grid">
             <div class="servicio">
-                <h3>Servicio 1</h3>
-                <p>Descripción del servicio 1.</p>
+                <h3>Servicio técnico</h3>
+                <p>Siempre que surja un problema en tu ordenador puedes acudir con uno de nuestros profesionales.</p>
             </div>
             <div class="servicio">
-                <h3>Servicio 2</h3>
-                <p>Descripción del servicio 2.</p>
+                <h3>Tienda de componentes y periféricos</h3>
+                <p>¿Necesitas una mejora? ¿Cambiar esos cascos robados del aula de informática? ¿Unas luces LED para tu setup? ¡Todo esto y mucho más lo encontrás en nuestra tienda!</p>
             </div>
             <div class="servicio">
-                <h3>Servicio 3</h3>
-                <p>Descripción del servicio 3.</p>
+                <h3>Montaje de ordenadores</h3>
+                <p>¿Tienes las piezas para montar tu equipo, pero tienes menos maña que un pingüino tocando el tambor? ¡No te preocupes! Aquí estamos para ocuparnos del montaje del PC, la instalación del sistema, o incluso cambiarte componentes.</p>
             </div>
         </div>
     </section>
@@ -56,15 +51,13 @@ initial-scale=1.0">
             <img src="img1.jpg" alt="Imagen 1">
             <img src="img2.jpg" alt="Imagen 2">
             <img src="img3.jpg" alt="Imagen 3">
-            <!--
-Más imágenes si se desea -->
+            <!-- Más imágenes si se desea -->
         </div>
     </section>
     <section id="contacto">
         <h2>Contacto</h2>
         <form>
-            <!--
-Formulario de contacto -->
+            <!-- Formulario de contacto -->
             <input type="text" placeholder="Nombre">
             <input type="email" placeholder="Correo electrónico">
             <textarea placeholder="Mensaje"></textarea>
@@ -73,7 +66,7 @@ Formulario de contacto -->
     </section>
     <footer>
         <p>&copy;
-            2024 Empresa Innovadora</p>
+            2024 Meteor PCs</p>
     </footer>
 </body>
 </html>
