Por favor mátenme

--- a/DIW/Ejercicios/Ejercicio practico/index.html
+++ b/DIW/Ejercicios/Ejercicio practico/index.html
@@ -48,9 +48,9 @@ initial-scale=1.0">
     <section id="galeria">
         <h2>Galería</h2>
         <div class="galeria-grid">
-            <img src="img1.jpg" alt="Imagen 1">
-            <img src="img2.jpg" alt="Imagen 2">
-            <img src="img3.jpg" alt="Imagen 3">
+            <img src="img/montaje.jpg" alt="Montaje de ordenador">
+            <img src="img/grafica.jpg" alt="Componente">
+            <img src="img/asistencia_tecnica.webp" alt="Asistentes">
             <!-- Más imágenes si se desea -->
         </div>
     </section>
