--- a/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/index.html
+++ b/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id="nickname_frame">
+        <form action="" method="post" id="nickname_form">
+            <label for="nickname">Write a nickname to begin!</label>
+            <br>
+            <input type="text" name="nickname" id="nickname">
+            <br>
+
+            <input type="submit" value="Let's play">
+        </form>
+    </div>
 </body>
 </html>
