Por favor dios, ayúdame

--- a/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/index.html
+++ b/DWC/Practicas/PRÀCTICA_FINAL_joc_Vazquez_Elier/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Jogo</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="nickname_frame">
-        <form action="" method="post" id="nickname_form">
+        <form action="memory_game.php" method="post" id="nickname_form">
             <label for="nickname">Write a nickname to begin!</label>
             <br>
             <input type="text" name="nickname" id="nickname">
